--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-base.yml
@@ -24,6 +24,7 @@ paths:
   # So we define NOP operation here as workaround.
   /nop:
     get:
+      operationId: noOperation
       responses:
         '200':
           description: Nothing is the result of nop ;-)
