--- a/jeaf-generator-test-services-impl-runtime/pom.xml
+++ b/jeaf-generator-test-services-impl-runtime/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.9</version>
+		<version>1.6.10-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Services Impl Runtime</name>
