JEAF-731 JEAF Generator now also supports technical details on generated exceptions.

--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
   </scm>
 	
 	<properties>
-		<jeaf.x-fun.api.version>1.6.0</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.0</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.0</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.0</jeaf.core.api.version>
-		<jeaf.core.impl.version>1.6.0</jeaf.core.impl.version>
+		<jeaf.x-fun.api.version>1.6.3-SNAPSHOT</jeaf.x-fun.api.version>
+		<jeaf.x-fun.impl.version>1.6.5-SNAPSHOT</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.5-SNAPSHOT</jeaf.tools.api.version>
+		<jeaf.core.api.version>1.6.2-SNAPSHOT</jeaf.core.api.version>
+		<jeaf.core.impl.version>1.6.2-SNAPSHOT</jeaf.core.impl.version>
 		<jeaf.persistence.api.version>1.6.0</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.0</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.0</jeaf.workload.api.version>
