--- a/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/product-services.yml
@@ -331,3 +331,14 @@ paths:
           
 
 
+components:
+  schemas:
+    # com.anaptecs.jeaf.junit.openapi.service1.Sale
+    Sale:
+      type: object
+      properties:
+        transactionAmount: 
+          type: number
+          format: double
+
+    
