--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,15 @@
   </scm>
 	
 	<properties>
-		<jeaf.x-fun.api.version>1.6.4-SNAPSHOT</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.7-SNAPSHOT</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.6-SNAPSHOT</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.4-SNAPSHOT</jeaf.core.api.version>
+		<jeaf.x-fun.api.version>1.6.4</jeaf.x-fun.api.version>
+		<jeaf.x-fun.impl.version>1.6.7</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.6</jeaf.tools.api.version>
+		<jeaf.core.api.version>1.6.4</jeaf.core.api.version>
 		<jeaf.core.impl.version>1.6.4</jeaf.core.impl.version>
 		<jeaf.persistence.api.version>1.6.0</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.0</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.0</jeaf.workload.api.version>
-		<jeaf.test.model.version>1.0.14-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.14</jeaf.test.model.version>
 	</properties>
 
 	<modules>
