--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -74,6 +74,10 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateOpenAPISpec>true</generateOpenAPISpec>
+					<!--  
+					<generateServiceObjects>true</generateServiceObjects>
+					<generateCustomConstraints>true</generateCustomConstraints>
+					-->
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
