--- a/jeaf-generator/.classpath
+++ b/jeaf-generator/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src-gen/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Oracle JDK 1.7.0"/>
 	<classpathentry kind="lib" path="D:/MavenRepository/com/anaptecs/jeaf/x-fun/jeaf-x-fun-api/1.5.23/jeaf-x-fun-api-1.5.23.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
