--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 		<jeaf.junit.extensions.version>1.6.0</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.0</jeaf.workload.api.version>
 		<jeaf.test.model.version>1.0.15-SNAPSHOT</jeaf.test.model.version>
+		
+		<jackson.version>2.13.0</jackson.version>
 	</properties>
 
 	<modules>
