--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -95,6 +95,7 @@
 					<generateServiceObjects>true</generateServiceObjects>
 					<generateJAXRSAnnotations>true</generateJAXRSAnnotations>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
+					<enableSemVerForJSON>false</enableSemVerForJSON>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
