JEAF-3017 Fixed wrong names of bean parameters in OpenAPI specification

--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -93,6 +93,8 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateServiceObjects>true</generateServiceObjects>
+					<generateServiceInterfaces>true</generateServiceInterfaces>
+					<generateRESTResources>true</generateRESTResources>
 					<generateJAXRSAnnotations>true</generateJAXRSAnnotations>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					<enableSemVerForJSON>false</enableSemVerForJSON>
