--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.21</version>
+		<version>1.0.22-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -21,18 +21,18 @@
 		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
 		<developerConnection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</developerConnection>
 		<url>https://bitbucket.org/anaptecs/jeaf-generator</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	
 	<properties>
 		<jeaf.x-fun.api.version>1.6.4</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.7</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.6</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.4</jeaf.core.api.version>
-		<jeaf.core.impl.version>1.6.4</jeaf.core.impl.version>
-		<jeaf.persistence.api.version>1.6.0</jeaf.persistence.api.version>
-		<jeaf.junit.extensions.version>1.6.0</jeaf.junit.extensions.version>
-		<jeaf.workload.api.version>1.6.0</jeaf.workload.api.version>
+		<jeaf.x-fun.impl.version>1.6.9</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.7</jeaf.tools.api.version>
+		<jeaf.core.api.version>1.6.6</jeaf.core.api.version>
+		<jeaf.core.impl.version>1.6.7</jeaf.core.impl.version>
+		<jeaf.persistence.api.version>1.6.3</jeaf.persistence.api.version>
+		<jeaf.junit.extensions.version>1.6.3</jeaf.junit.extensions.version>
+		<jeaf.workload.api.version>1.6.5</jeaf.workload.api.version>
 		<jeaf.test.model.version>1.0.15-SNAPSHOT</jeaf.test.model.version>
 		
 		<jackson.version>2.13.0</jackson.version>
