--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<jeaf.persistence.api.version>1.6.3</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.3</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.5</jeaf.workload.api.version>
-		<jeaf.test.model.version>1.0.15-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.15</jeaf.test.model.version>
 		
 		<jackson.version>2.13.0</jackson.version>
 	</properties>
