--- a/jeaf-generator-test-object-mappers/pom.xml
+++ b/jeaf-generator-test-object-mappers/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.14</version>
+		<version>1.6.15-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Object Mappers</name>
