JEAF Generator now uses JEAF JSON for serialization tests

--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -40,6 +40,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.anaptecs.jeaf.json</groupId>
+			<artifactId>jeaf-json-impl</artifactId>
+		    <version>${jeaf.json.impl.version}</version>
+		</dependency>
+		
+
+		<dependency>
 			<groupId>com.anaptecs.jeaf.uml</groupId>
 			<artifactId>jeaf-uml-test-model</artifactId>
 			<version>${jeaf.test.model.version}</version>
