--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<jeaf.persistence.api.version>1.6.5</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.5</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.6</jeaf.workload.api.version>
+		<jeaf.json.impl.version>1.6.0-SNAPSHOT</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.15</jeaf.test.model.version>
 		
 		<jackson.version>2.13.0</jackson.version>
