--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.24</version>
+		<version>1.0.25</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -34,7 +34,7 @@
 		<jeaf.junit.extensions.version>1.6.5</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.6</jeaf.workload.api.version>
 		<jeaf.json.impl.version>1.6.0-SNAPSHOT</jeaf.json.impl.version>
-		<jeaf.test.model.version>1.0.15</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.16-SNAPSHOT</jeaf.test.model.version>
 		
 		<jackson.version>2.13.0</jackson.version>
 	</properties>
