--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,15 @@
 		<jeaf.x-fun.api.version>1.6.4</jeaf.x-fun.api.version>
 		<jeaf.x-fun.impl.version>1.6.11</jeaf.x-fun.impl.version>
 		<jeaf.tools.api.version>1.6.7</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.8</jeaf.core.api.version>
-		<jeaf.core.impl.version>1.6.9</jeaf.core.impl.version>
+		<jeaf.core.api.version>1.6.9-SNAPSHOT</jeaf.core.api.version>
+		<jeaf.core.impl.version>1.6.10-SNAPSHOT</jeaf.core.impl.version>
 		<jeaf.persistence.api.version>1.6.5</jeaf.persistence.api.version>
 		<jeaf.junit.extensions.version>1.6.5</jeaf.junit.extensions.version>
 		<jeaf.workload.api.version>1.6.6</jeaf.workload.api.version>
 		<jeaf.json.impl.version>1.6.0-SNAPSHOT</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.16-SNAPSHOT</jeaf.test.model.version>
 		
-		<jackson.version>2.13.0</jackson.version>
+		<jackson.version>2.13.1</jackson.version>
 	</properties>
 
 	<modules>
