--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -35,16 +35,18 @@
 			<groupId>com.anaptecs.jeaf.x-fun</groupId>
 			<artifactId>jeaf-x-fun-default-runtime</artifactId>
 			<version>${jeaf.x-fun.impl.version}</version>
-			<scope>test</scope>
 			<type>pom</type>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.anaptecs.jeaf.json</groupId>
-			<artifactId>jeaf-json-impl</artifactId>
+			<artifactId>jeaf-json-impl-runtime</artifactId>
 		    <version>${jeaf.json.impl.version}</version>
+		    <type>pom</type>
+		    <scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.anaptecs.jeaf.uml</groupId>
 			<artifactId>jeaf-uml-test-model</artifactId>
@@ -143,6 +145,7 @@
 							<explicitConfigurationDetection>
 								<detectXFunConfigs>true</detectXFunConfigs>
 								<detectToolsConfigs>true</detectToolsConfigs>
+								<detectJSONConfigs>true</detectJSONConfigs>
 							</explicitConfigurationDetection>
 						</configuration>
 					</execution>
