--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -3,12 +3,21 @@ openapi: 3.0.0
 servers:
   - url: http://localhost:8080/test
   - url: https://accounting.jeaf.de
+  - url: https://demo-jeaf.anaptecs.de
+  - url: https://test-jeaf.anaptecs.de
+  - url: https://jeaf.anaptecs.de
+    description: >- 
+      This is our lovely production environment
+      
+      It can stand any load, until it crashes ;-)
 
 info:
   title: Product Services
   version: 0.0.1
   description: >-
-    This component represents the Open API interface of the accounting service.
+    This component represents the OpenAPI interface of the accounting service.
+    
+    Dear Developers, please be aware that multi line comments can also be used.
   contact:
     name: JEAF Development Team
     url: 'https://www.anaptecs.de/jeaf'
@@ -338,5 +347,7 @@ components:
         transactionAmount: 
           type: number
           format: double
+        sale: 
+          $ref: '../base/product-base.yml#/components/schemas/Channel'
 
     
