JEAF-3046 Implemented and tested usage of Maven version as OpenAPI version

--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -13,7 +13,7 @@ servers:
 
 info:
   title: Product Services
-  version: 0.0.1
+  version: 1.6.18-SNAPSHOT
   description: >-
     This component represents the OpenAPI interface of the accounting service.
     
