--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -109,7 +109,7 @@ components:
           minItems: 1
         name: 
           type: string
-          maxLength: 64
+          maximum: 64
           minLength: 1
 
         language: 
@@ -127,7 +127,7 @@ components:
           minItems: 0
         name: 
           type: string
-          minLength: 17
+          minimum: 17
         image: 
           type: array
           items:
@@ -554,6 +554,196 @@ components:
           items:
             $ref: '#/components/schemas/Partner'
           minItems: 0
+    # com.anaptecs.jeaf.junit.openapi.base.PrimitiveObjectWithRestrictions
+    PrimitiveObjectWithRestrictions:
+      type: object
+      properties:
+        aBoolean: 
+          type: boolean
+        bBoolean: 
+          type: boolean
+        cBoolean: 
+          type: boolean
+        aByte: 
+          type: integer
+          format: int32
+        bByte: 
+          type: integer
+          format: int32
+        aShort: 
+          type: integer
+          format: int32
+        bShort: 
+          type: integer
+          format: int32
+        aInteger: 
+          type: integer
+          format: int32
+        bInteger: 
+          type: integer
+          format: int32
+        cInteger: 
+          type: integer
+          format: int32
+        aLong: 
+          type: integer
+          format: int64
+        bLong: 
+          type: integer
+          format: int64
+        aBigInteger: 
+          type: integer
+          format: int64
+        aCharacter: 
+          type: string
+        bCharacter: 
+          type: string
+        aFloat: 
+          type: number
+          format: float
+        bFloat: 
+          type: number
+          format: float
+        aDouble: 
+          type: number
+          format: double
+        bDouble: 
+          type: number
+          format: double
+        aBigDecimal: 
+          type: number
+          format: double
+        aString: 
+          type: string
+        bString: 
+          type: string
+      required:
+        - aBoolean
+        - cBoolean
+        - aByte
+        - aShort
+        - aInteger
+        - aLong
+        - aCharacter
+        - aFloat
+        - aDouble
+    # com.anaptecs.jeaf.junit.openapi.base.PrimitiveArraysObjectWithRestrictions
+    PrimitiveArraysObjectWithRestrictions:
+      type: object
+      properties:
+        aBooleanArray: 
+          type: array
+          items:
+            type: boolean
+        bBooleanArray: 
+          type: array
+          items:
+            type: boolean
+        cBooleanArray: 
+          type: array
+          items:
+            type: boolean
+        aByteArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        bByteArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        aShortArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        bShortArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        aIntegerArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        bIntegerArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        cIntegerArray: 
+          type: array
+          items:
+            type: integer
+            format: int32
+        aLongArray: 
+          type: array
+          items:
+            type: integer
+            format: int64
+        bLongArray: 
+          type: array
+          items:
+            type: integer
+            format: int64
+        aBigIntegerArray: 
+          type: array
+          items:
+            type: integer
+            format: int64
+        aCharacterArray: 
+          type: array
+          items:
+            type: string
+        bCharacterArray: 
+          type: array
+          items:
+            type: string
+        aFloatArray: 
+          type: array
+          items:
+            type: number
+            format: float
+        bFloatArray: 
+          type: array
+          items:
+            type: number
+            format: float
+        aDoubleArray: 
+          type: array
+          items:
+            type: number
+            format: double
+        bDoubleArray: 
+          type: array
+          items:
+            type: number
+            format: double
+        aBigDecimalArray: 
+          type: array
+          items:
+            type: number
+            format: double
+        aStringArray: 
+          type: array
+          items:
+            type: string
+        bStringArray: 
+          type: array
+          items:
+            type: string
+      required:
+        - aBooleanArray
+        - cBooleanArray
+        - aByteArray
+        - aShortArray
+        - aIntegerArray
+        - aLongArray
+        - aCharacterArray
+        - aFloatArray
+        - aDoubleArray
 
     
     # com.anaptecs.jeaf.junit.openapi.base.TimeUnit
