Added first version of custom extension for JEAF Generator

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
 		<module>jeaf-generator-maven-plugin</module>
 
 		<!-- The following modules are required to test JEAF Generator output -->
+		<module>jeaf-generator-test-custom-extension</module>
+		<module>jeaf-generator-test-custom-extension-usage</module>
 		<module>jeaf-generator-test-message-constants</module>
 		<module>jeaf-generator-test-model</module>
 		<module>jeaf-generator-test-service-objects</module>
